ball moving and bouncing

--- a/pong.kv
+++ b/pong.kv
@@ -2,6 +2,8 @@
 
 
 <PongGame>:
+    ball: pong_ball
+
     canvas:
         Rectangle:
             pos: self.center_x - 5, 0
@@ -20,6 +22,7 @@
         text: "0"
 
     PongBall:
+        id: pong_ball
         center: self.parent.center
 
 
