--- a/pong.kv
+++ b/pong.kv
@@ -15,13 +15,13 @@
         font_size: 70
         center_x: root.width / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player1.score)
     
     Label:
         font_size: 70
         center_x: root.width * 3 / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player2.score)
 
     PongBall:
         id: pong_ball
